# frnsc-amcache

./: .gitignore  Cargo.toml  README.md
artifacts/C/Windows/AppCompat/Programs/: Amcache.hve
src/: amcache.rs  lib.rs  tst.rs
src/common/: app.rs  app_file.rs  app_shortcut.rs  dev_container.rs  drv_binary.rs  drv_package.rs  mod.rs
